Add box element

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Lit + TS</title>
     <script type="module" src="/src/public_api.ts"></script>
+    <style>
+      @import url("https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css");
+      @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css");
+    </style>
   </head>
-  <body></body>
+  <body>
+    <b-box> hello world </b-box>
+  </body>
 </html>
